--- a/css/styles.css
+++ b/css/styles.css
@@ -533,3 +533,65 @@ body {
 	width: 24px;
 	height: 24px;
 }
+
+/* ------------------- modal window ----------------- */
+
+.backdrop {
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+
+	background-color: rgba(46, 47, 66, 0.4);
+}
+
+/* .backdrop.is-hidden {
+	opacity: 0;
+	pointer-events: none;
+} */
+
+.modal {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	min-height: 576px;
+	min-width: 408px;
+	padding: 24px;
+	transform: translate(-50%, -50%);
+
+	background: #FCFCFC;
+	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
+			0px 1px 3px rgba(0, 0, 0, 0.12),
+			0px 2px 1px rgba(0, 0, 0, 0.2);
+	border-radius: 4px;
+}
+
+.btn-modal {
+	position: absolute;
+	top: 24px;
+	right: 24px;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	width: 24px;
+	height: 24px;
+	
+	background: #E7E9FC;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	border-radius: 50%;
+}
+
+.btn-modal:hover,
+.brn-modal:active {
+	box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+			0px 1px 1px rgba(46, 47, 66, 0.16),
+			0px 2px 1px rgba(46, 47, 66, 0.08);
+	border: none;
+	border-radius: 50%;
+}
+
+.btn-modal .btn-close {
+	width: 8px;
+	height: 8px;
+}
