--- a/css/styles.css
+++ b/css/styles.css
@@ -546,10 +546,10 @@ body {
 	background-color: rgba(46, 47, 66, 0.4);
 }
 
-/* .backdrop.is-hidden {
+.backdrop.is-hidden {
 	opacity: 0;
 	pointer-events: none;
-} */
+}
 
 .modal {
 	position: absolute;
