--- a/css/styles.css
+++ b/css/styles.css
@@ -93,23 +93,11 @@ body {
 	text-decoration: none;
 	color: var(--text-color);
 
-	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-		box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link:hover,
 .link:focus {
-	color: var(--accent-color);
-}
-
-.nav-link {
-	font-size: 16px;
-	font-weight: 500;
-	line-height: 1.5;
-	color: var(--secondary-color);
-}
-
-.item.active .nav-link {
 	color: var(--accent-color);
 }
 
@@ -118,6 +106,31 @@ body {
 .logo.header {
 	display: block;
 	padding: 24px 0;
+}
+
+.nav-link {
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 1.5;
+	color: var(--secondary-color);
+
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.item.active .nav-link {
+	color: var(--accent-color);
+}
+
+.item.active .nav-link::after {
+	content: "";
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 4px;
+
+	background-color: var(--accent-color);
+	border-radius: 2px;
 }
 
 .nav-link:hover,
@@ -129,21 +142,6 @@ body {
 .contact.link:hover,
 .contact.link:focus {
 	color: var(--accent-color);
-}
-
-.nav-menu .item.active::after {
-	content: "";
-	position: absolute;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	height: 4px;
-
-	background-color: var(--accent-color);
-	border-radius: 2px;
-
-	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-		box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ------------------ headers ------------------ */
@@ -425,19 +423,20 @@ body {
 	padding: 40px 32px;
 
 	position: absolute;
-	top: 100%;
+	top: 0;
 	left: 0;
 
 	color: var(--secondary-text-color);
 
 	background-color: var(--accent-color);
 
+	transform: translateY(100%);
 	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover .overlay,
 .portfolio-item:focus .overlay {
-	transform: translateY(-100%);
+	transform: translateY(0);
 }
 
 /* ------------------ buttons ------------------ */
@@ -461,7 +460,8 @@ body {
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 	cursor: pointer;
 
-	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	transition: background-clor 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+		opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .order-button:hover,
@@ -608,10 +608,11 @@ body {
 	height: 100%;
 
 	background-color: rgba(46, 47, 66, 0.4);
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-/* 
-.backdrop > .modal {
-	animation: scale-up-center 400ms cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+
+/* .backdrop > .modal {
+	animation: scale-up-center 400ms cubic-bezier(0.39, 0.575, 0.565, 1) both;
 } */
 
 .backdrop.is-hidden {
