--- a/css/styles.css
+++ b/css/styles.css
@@ -19,18 +19,6 @@
 	--success-color: #31d0aa;
 }
 
-@keyframes scale-up-center {
-	0% {
-		transform: scale(0.5);
-		opacity: 0;
-	}
-
-	100% {
-		transform: scale(1);
-		opacity: 1;
-	}
-}
-
 *,
 *::after,
 *::before {
@@ -600,20 +588,17 @@ body {
 	left: 0;
 	top: 0;
 
-	display: flex;
+	/* display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: center; */
 
 	width: 100%;
 	height: 100%;
 
 	background-color: rgba(46, 47, 66, 0.4);
+	opacity: 1;
 	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-/* .backdrop > .modal {
-	animation: scale-up-center 400ms cubic-bezier(0.39, 0.575, 0.565, 1) both;
-} */
 
 .backdrop.is-hidden {
 	opacity: 0;
@@ -621,8 +606,15 @@ body {
 	visibility: hidden;
 }
 
+.backdrop.is-hidden .modal {
+	transform: translate(-50%, -50%) scale(0.5);
+}
+
 .modal {
-	position: relative;
+	/* position: relative; */
+	position: absolute;
+	top: 50%;
+	left: 50%;
 	min-height: 576px;
 	min-width: 408px;
 	padding: 24px;
@@ -631,7 +623,8 @@ body {
 	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
 	border-radius: 4px;
 
-	/* transform: translate(-50%, -50%); */
+	transform: translate(-50%, -50%) scale(1);
+	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-modal {
