--- a/css/styles.css
+++ b/css/styles.css
@@ -13,14 +13,14 @@
 	--primary-brand: #4d5ae5;
 	--pressed-state: #404bbf;
 
-	--secondary-color: #2e2f42;
+	--dark-color: #2e2f42;
 	--success-color: #31d0aa;
 
 	--text-color: #434455;
 	--subtle-text-color: #8e8f99;
 
-	--secondary-text-color: #f4f4fd;
-	--secondary-accent-color: #e7e9fc;
+	--accent-color: #e7e9fc;
+	--light-color: #f4f4fd;
 
 	--modal-overlay: rgba(46, 47, 66, 0.4);
 	--hero-background: rgba(46, 47, 66, 0.7);
@@ -51,7 +51,7 @@ body {
 }
 
 .grey {
-	background-color: var(--secondary-text-color);
+	background-color: var(--light-color);
 }
 
 .block {
@@ -66,7 +66,7 @@ body {
 	font-weight: 800;
 	line-height: 1.3;
 	letter-spacing: 0.03em;
-	color: var(--secondary-color);
+	color: var(--dark-color);
 
 	text-decoration: none;
 }
@@ -107,7 +107,7 @@ body {
 	font-size: 16px;
 	font-weight: 500;
 	line-height: 1.5;
-	color: var(--secondary-color);
+	color: var(--dark-color);
 
 	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -146,7 +146,7 @@ body {
 	font-size: 20px;
 	font-weight: 500;
 	line-height: 1.2;
-	color: var(--secondary-color);
+	color: var(--dark-color);
 }
 
 .section-header {
@@ -208,7 +208,7 @@ body {
 
 	text-align: center;
 
-	background-color: var(--secondary-color);
+	background-color: var(--dark-color);
 	background-image: linear-gradient(to right, var(--hero-background), var(--hero-background)),
 		url(../images/people-office.jpg);
 	background-repeat: no-repeat;
@@ -234,7 +234,7 @@ body {
 	font-weight: 500;
 	font-size: 36px;
 	line-height: 1.11;
-	color: var(--secondary-color);
+	color: var(--dark-color);
 	text-align: center;
 }
 
@@ -257,7 +257,7 @@ body {
 
 	text-align: center;
 
-	background-color: var(--secondary-text-color);
+	background-color: var(--light-color);
 	border-radius: 4px;
 }
 
@@ -377,7 +377,7 @@ body {
 .portfolio-item-description {
 	padding: 32px 16px;
 
-	border: 0.5px solid var(--secondary-text-color);
+	border: 0.5px solid var(--light-color);
 	border-top: none;
 }
 
@@ -422,7 +422,7 @@ body {
 	top: 0;
 	left: 0;
 
-	color: var(--secondary-text-color);
+	color: var(--light-color);
 
 	background-color: var(--primary-brand);
 
@@ -479,8 +479,8 @@ body {
 	line-height: 1.28;
 	color: var(--primary-brand);
 
-	background-color: var(--secondary-text-color);
-	border: 1px solid var(--secondary-accent-color);
+	background-color: var(--light-color);
+	border: 1px solid var(--accent-color);
 	border-radius: 4px;
 	cursor: pointer;
 
@@ -490,7 +490,7 @@ body {
 
 .filter-button:hover,
 .filter-button:focus {
-	color: var(--secondary-text-color);
+	color: var(--light-color);
 
 	background-color: var(--primary-brand);
 	border: 1px solid transparent;
@@ -542,9 +542,9 @@ body {
 .footer {
 	padding: 100px 0;
 
-	color: var(--secondary-accent-color);
+	color: var(--accent-color);
 
-	background-color: var(--secondary-color);
+	background-color: var(--dark-color);
 }
 
 .footer .container {
